--- a/fitnesstrackertest-Gradle/src/main/resources/templates/index.html
+++ b/fitnesstrackertest-Gradle/src/main/resources/templates/index.html
@@ -138,7 +138,9 @@
 		</div>
 	</div>
 	<script>
+		
 		let backgroundImg = document.getElementById("sliderId");
+		<!-- images array consists of background images to be rotated in the welcome page -->
 		let images = ['FitnessTrackerTest-Images/Background-Img-1.jpg', 'FitnessTrackerTest-Images/Background-Img-2.jpg', 'FitnessTrackerTest-Images/Background-Img-3.jpg'];
 		let len = images.length, count = 0;
 		function Slider() {
